--- a/app/views/checkout/3dsecure_verification.html.erb
+++ b/app/views/checkout/3dsecure_verification.html.erb
@@ -5,12 +5,18 @@
 <br/>
 You have chosen to use a card that is part of the 3D-Secure scheme, so you will need to authenticate yourself with your bank in the section below.
 </p>
-<img src="/images/vbv_logo_small.gif" alt="Verified by Visa">
-<img src="/images/mcsc_logo.gif" alt="MasterCard SecureCode">
 
 <div align="center">
-<iframe src="/orders/<%= @order.number %>/checkout/secure_form" width="100%" height="620" frameborder=0>
-<% session["3Dform"] %>
-</iframe>
+<div align="center" style="width: 500px">
+  <img src="/images/vbv_logo_small.gif" alt="Verified by Visa">
+  <img src="/images/mcsc_logo.gif" alt="MasterCard SecureCode">
+  <br/>
+
+  <iframe src="/orders/<%= @order.number %>/checkout/secure_form" width="450" height="450" frameborder="0" scrolling="no" >
+    <div align="center">
+      <% session["3Dform"] %>
+    </div>
+  </iframe>
+</div>
 </div>
 
