tweaks - made checkout styling more selective (for text boxes), and added breadcrumb separator padding

--- a/public/stylesheets/spree.css
+++ b/public/stylesheets/spree.css
@@ -321,6 +321,10 @@ span.current_page {
 .breadcrumbs img {
   padding-left: 5px;
 }
+
+#breadcrumbs span.divider {
+  padding: 5px 5px;
+}
 /* ===================== end: Breadcrumbs =====================*/
 
 /** ================ begin: product-related =================== */
