changed naming for shipping instrs

--- a/app/views/orders/_shipping_method.html.erb
+++ b/app/views/orders/_shipping_method.html.erb
@@ -4,7 +4,7 @@
         <% if Spree::Config[:shipping_instructions] %>
           <p id="minstrs">
             <label for=""><%= t("shipping_instructions") %></label>
-            <%= f.text_field :shipping_instructions -%>
+            <%= order_form.text_field :special_instructions -%>
           </p>
         <% end %>
 	<p><input id="select_shipping_method" type="button" value="<%=t("continue")%>"/></p>
