--- a/app/views/orders/_billing.html.erb
+++ b/app/views/orders/_billing.html.erb
@@ -30,7 +30,7 @@
   			:id, 
   			:name, 
   			{:include_blank => true}, 
-  			{:style=> 'width:150px;'}) %>
+  			{}) %>
   		</span>
   		<span class="req">*</span>
   	</p>
@@ -40,7 +40,7 @@
   	</p>    
   	<p id="bcountry">
   		<label for=""><%= t("country") %></label>
-  		<span id="bcountry"><%= bill_form.collection_select :country_id, @countries, :id, :name, {}, {:style => 'width:150px;', :class => 'required'} %></span>
+  		<span id="bcountry"><%= bill_form.collection_select :country_id, @countries, :id, :name, {}, {:class => 'required'} %></span>
   	</p>
   	<p id="bphone">
   		<label for=""><%= t("phone") %></label>
