--- a/app/views/orders/_shipping.html.erb
+++ b/app/views/orders/_shipping.html.erb
@@ -31,7 +31,7 @@
   			:id, 
   			:name, 
   			{:include_blank => true}, 
-  			{:style=> 'width:150px;'}) %>
+  			{}) %>
   		</span>
   		<span class="req">*</span>
   	</p>  
@@ -41,7 +41,7 @@
   	</p>
   	<p id="scountry">
   		<label for="<%= t("country") %>"><%= t("country") %></label>
-  		<span id="scountry"><%= ship_form.collection_select :country_id, @shipping_countries, :id, :name, {}, {:style => 'width:150px;', :class => 'required'} %></span>
+  		<span id="scountry"><%= ship_form.collection_select :country_id, @shipping_countries, :id, :name, {}, {:class => 'required'} %></span>
   	</p>
   	<p id="sphone">
   		<label for="<%= t("phone") %>"><%= t("phone") %></label>
