add admin UI for editing product groups as well as adding/removing products to/from ProductGroupList type product groups.  The views and partials (as well as actions) end up scattered all over the place and I would prefer that they were collected into one place with the code for the product group subclass they were for.

--- a/app/views/admin/product_groups/new.html.erb
+++ b/app/views/admin/product_groups/new.html.erb
@@ -1,10 +1,10 @@
 <%= render :partial => 'shared/product_sub_menu' %>
 
-<%= error_messages_for :prototype %>
+<%= error_messages_for :product_group %>
 
-<% form_for(:prototype, :url => collection_url) do |f| %>
+<% form_for(:product_group, :url => collection_url) do |f| %>
 <fieldset>
-  <legend><%= t("new_prototype")%></legend>
+  <legend><%= t("new_product_group")%></legend>
   <%= render :partial => "form", :locals => { :f => f } %>
   <%= render :partial => 'admin/shared/new_resource_links' %>
 </fieldset>
