--- a/app/views/orders/_shipping_method.html.erb
+++ b/app/views/orders/_shipping_method.html.erb
@@ -1,21 +1,16 @@
 <h2><%= t("shipping_method") %></h2>
 <div class="inner">
-<<<<<<< HEAD:app/views/orders/_shipping_method.html.erb
-	<div id="methods"></div>
-        <% if Spree::Config[:shipping_instructions] %>
-          <p id="minstrs">
-            <label for=""><%= t("shipping_instructions") %></label>
-            <%= order_form.text_field :special_instructions -%>
-          </p>
-        <% end %>
-	<p><input id="select_shipping_method" type="button" value="<%=t("continue")%>"/></p>
-=======
   <div id="methods"></div>
   <div class="error">
     <%= t('unable_ship_method') %>
   </div>
+  <% if Spree::Config[:shipping_instructions] %>
+    <p id="minstrs">
+      <label for=""><%= t("shipping_instructions") %></label>
+      <%= order_form.text_field :special_instructions -%>
+    </p>
+  <% end %>
   <div class="form-buttons">
-    <input id="continue_shipping_method" type="button" class="button primar" value="<%=t("continue")%>"/>
+    <input id="continue_shipping_method" type="button" class="button primary" value="<%=t("continue")%>"/>
   </div>
->>>>>>> f446c96a6c5958ad4b832f176925eed0fbd09674:app/views/orders/_shipping_method.html.erb
 </div>
