checkpoint changes to date

--- a/app/views/admin/shared/_product_group_list_product_table.html.erb
+++ b/app/views/admin/shared/_product_group_list_product_table.html.erb
@@ -1,7 +1,7 @@
 <table class="index">
   <tr>
-    <th><%= t("sku") %></td>
-    <th><% #= order_by_link :name, :text => t("name") %></td>
+    <th><%= t("sku") %></th>
+    <th><% #= order_by_link :name, :text => t("name") %></th>
     <th>&nbsp;</th>
   </tr>
 <% product_group.products.each do |product| %>
