Refactor product group routing for product group list using controller directive in the routes.rb resources section to force the route to use the product_group controller rather than the product controller that it was trying to use. This allows me to move all of the methods and views into the product group controller sections where they belong rather than scattering them all over the place.

--- a/app/views/admin/product_groups/_product_group_list_form.html.erb
+++ b/app/views/admin/product_groups/_product_group_list_form.html.erb
@@ -1,6 +1,6 @@
 <!-- Included Product List -->
 <div id="selected-products">
-<%= render :partial => "admin/shared/#{@product_group.group_type.underscore}_product_table", :locals => {:product_group => @product_group} %>
+<%= render :partial => "#{@product_group.group_type.underscore}_product_table", :locals => {:product_group => @product_group} %>
 </div>
 <!-- Product Search -->
 <% form_tag('#') do %>
