--- a/app/views/admin/product_groups/edit.html.erb
+++ b/app/views/admin/product_groups/edit.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => 'admin/shared/product_sub_menu' %>
 
-<%= render :partial => 'admin/shared/product_group_tabs', :locals => {:current => "product_group_details"} %>
+<%= render :partial => 'product_group_tabs', :locals => {:current => "product_group_details"} %>
 
 <h1><%= t("editing_product_group") %></h1>
 
