--- a/app/views/admin/product_groups/product_group_list_selected.html.erb
+++ b/app/views/admin/product_groups/product_group_list_selected.html.erb
@@ -6,6 +6,6 @@
 
 <%= error_messages_for :product_group %>
 <% form_for(:product_group, :url => admin_product_group_url(@product_group), :html => { :method => :put }) do |f| %>
-  <%= render :partial => "#{@product_group.group_type.underscore}_form", :locals => { :f => f } %>
+  <%= render :partial => @product_group.view_name(:form), :locals => { :f => f } %>
   <%= render :partial => 'admin/shared/edit_resource_links' %>
 <% end %>
