--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -9,8 +9,11 @@
 
   <%= javascript_include_tag :defaults %> <!-- TODO: Remove.  See Issue #320 -->
   <%= javascript_include_tag 'jquery-1.3.2.min', 'spree', 'nested-attribute', 'zone', :cache => 'jquery-and-extras' %>
-
+  
   <%= yield :head %>
+
+  <%= javascript_include_tag 'jquery-plugins/jquery.delayedObserver' %>
+
 </head>
 <body class='yui-skin-sam admin'>
 <!--[if lte IE 7]>
