--- a/app/views/admin/product_groups/_product_group_list_product_table.html.erb
+++ b/app/views/admin/product_groups/_product_group_list_product_table.html.erb
@@ -13,9 +13,9 @@
       <%= link_to_remote icon('delete') + ' ' + t('remove'), 
 	  {:url => remove_admin_product_group_product_url(product_group, product),
       :method => 'DELETE',
-      :loading => "Element.show(#{dom_id(product, :rem_spinner)})",
+      :loading => "Element.show('#{dom_id(product, :rem_spinner)}')",
       :update => 'selected-products',
-      :complete => "$('#{dom_id(product, :sel)}').remove(); Element.hide(#{dom_id(product, :rem_spinner)});"}, :class => 'iconlink' %>
+      :complete => "Element.remove('#{dom_id(product, :sel)}'); Element.hide('#{dom_id(product, :rem_spinner)}');"}, :class => 'iconlink' %>
     </td>
   </tr>
 <% end %>
