--- a/app/views/admin/taxonomies/_taxon.html.erb
+++ b/app/views/admin/taxonomies/_taxon.html.erb
@@ -1,7 +1,7 @@
 <% if taxon.product_group %>
   <li id="<%= taxon.id %>" class="has-product-group" rel="taxon">
     <a href="#"><%= taxon.name %></a> 
-    -- <span id="<%= taxon.product_group.id %>"class="product-group"><%= taxon.product_group.name %></span>
+    -- <%= "#{taxon.product_group.group_type}[#{taxon.product_group.name}]" %></span>
 <% else %>
   <li id="<%= taxon.id %>" rel="taxon">
     <a href="#"><%= taxon.name %></a> 
